Revision history for hide-methods

{{$NEXT}}

0.0.6  2021-11-07T12:55:25+01:00
    - Remove module statement, we don't need it anymore

0.0.5  2021-09-24T21:09:51+02:00
    - Argh, wrong App::Mi6 version uploaded to CPAN instead of zef

0.0.4  2021-09-24T21:02:58+02:00
    - Fix regression on new-disp, jnthn++

0.0.3  2021-09-08T14:02:25+02:00
    - Change file extension to .rakumod
    - Migrate to zef ecosystem
    - Update email address
    - Update copyright year

0.0.2  2020-10-20T19:10:33+02:00
    - Add some more documentation

0.0.1  2020-10-20T19:03:57+02:00
    - Initial version